# song-recommender

./: .dockerignore  .env.example  .gitignore  BPM_MIGRATION_GUIDE.md  COMMENT_IMPROVEMENTS.md  DOCKER_OPTIMIZATION.md  Dockerfile  GOOGLE_AUTH_PLAN.md  IMPLEMENTATION_SUMMARY.md  METADATA_MIGRATION_GUIDE.md  MIGRATION_GUIDE.md  PLAYLIST_USER_AUTH_IMPLEMENTATION.md  README.md  USER_ALIAS_GUIDE.md  YOUTUBE_API_SETUP.md  YOUTUBE_OAUTH_SETUP.md  YouTube登録ページ統合提案.md  add_is_deleted_column.py  add_user_alias_column.py  add_user_ytmusic_auth_table.py  analyze_chain_search_performance.py  app.py  check_embedding_status.py  config.py  create_dl_script_from_yt.py  create_playlist_from_chain.py  db_maintenance.py  debug_chain_search.py  debug_chain_search_multi_db.py  debug_embedding.py  docker-compose.yml  home_page.py  init_database.py  main.py  migrate_bpm.py  migrate_playlist_comments.py  migrate_song_queue.py  migrate_to_mysql.py  pyproject.toml  register_songs.py  (+6 more)
.streamlit/: config.toml  pages.toml
core/: channel_db.py  database.py  db_manager.py  feature_extractor.py  feature_statistics.py  models.py  playlist_db.py  segment_search_cache.py  song_metadata_db.py  song_queue_db.py  ui_styles.py  user_db.py  user_ytmusic_auth.py  youtube_registration.py  youtube_url_detector.py  ytmusic_manager.py
data/: song_queue.db  youtube_channels.db
frontend/: package-lock.json
frontend/api/: README.md  main.py  observability.py  pyproject.toml
frontend/api/core/: db_manager.py  song_metadata_db.py  song_queue_db.py  youtube_url_detector.py
frontend/api/tests/: similar_probe.py  test_smoke_endpoints.py
pages/: 1_🎵_楽曲検索.py  (+21 more)
(+48 files in other folders)
