[project]
name = "song-recommender"
version = "0.1.0"
description = "ベクトルDBにデータ保存 / 曲調で検索する"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.4.0",
    "colorama>=0.4.6",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "ytmusicapi>=1.11.5",
    "streamlit>=1.31.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",
    "plotly>=5.0.0",
    "authlib>=1.6.7",
    "transformers>=5.1.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# [[tool.uv.index]]
# url = "https://pypi.org/simple"
